Compliance copy updates: liveness-only, user preference communities, 90-day cooldown note, FAQ additions

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             </div>
           </div>
         </div>
+        <p class="mt-4 text-center text-xs text-gray-500">You can change your community preference anytime in Settings. A 90-day cooldown applies between changes.</p>
       </div>
 
       <!-- Slide 2: The Problem -->
@@ -268,7 +269,7 @@
         
         <div class="text-center mb-12 animate-fade-in-up delay-400">
           <div class="inline-block bg-gradient-to-r from-blue-500 to-purple-600 text-white px-8 py-4 rounded-full text-2xl font-bold">
-            Mandatory AI Verification for All Users
+            Mandatory AI Liveness Verification (Authenticity Only)
           </div>
         </div>
 
@@ -284,7 +285,7 @@
           <div class="max-w-2xl text-xl space-y-6">
             <div class="glass-card p-6 rounded-lg animate-slide-in delay-700">
               <h3 class="font-bold text-2xl mb-3">1. Live Facial Liveness Check</h3>
-              <p class="text-lg">DeepFace AI analyzes real-time video - no photo uploads, no fakes possible.</p>
+              <p class="text-lg">DeepFace AI analyzes real-time video to confirm a real person is present — no photo uploads, no identity assignment, no gender inference.</p>
             </div>
             <div class="glass-card p-6 rounded-lg animate-slide-in delay-800">
               <h3 class="font-bold text-2xl mb-3">2. Real-Time Validation</h3>
@@ -342,7 +343,7 @@
             <div class="text-center">
               <div class="w-10 h-10 bg-blue-500 text-white rounded-full flex items-center justify-center mx-auto mb-2">1</div>
               <p class="font-semibold">Choose Experience</p>
-              <p class="text-gray-600 text-xs">Select Male or Female</p>
+              <p class="text-gray-600 text-xs">Select Men’s or Women’s community (user preference)</p>
             </div>
             <div class="text-center">
               <div class="w-10 h-10 bg-blue-500 text-white rounded-full flex items-center justify-center mx-auto mb-2">2</div>
@@ -704,7 +705,7 @@
             </div>
             <div class="mt-8 glass-card p-6 rounded-lg animate-fade-in-up delay-700">
               <h4 class="font-bold text-xl mb-4 text-orange-600">Why High-Value Advertising?</h4>
-              <p class="text-gray-700">Verified users, authentic engagement, and sex-specific targeting command premium ad rates.</p>
+              <p class="text-gray-700">Verified users and authentic engagement enable premium ad rates.</p>
             </div>
           </div>
           <div>
@@ -1118,6 +1119,10 @@
     <h2 class="text-gray-500 animate-fade-in-up">Appendix</h2>
     <h1 class="mb-8 text-5xl font-bold animate-fade-in-up delay-200">Investor FAQ</h1>
     <div class="content-grid text-lg">
+      <div class="glass-card p-6 rounded-lg animate-slide-in delay-250">
+        <h3 class="font-bold text-xl mb-2">Q: Do you validate or assign a user’s gender?</h3>
+        <p class="text-gray-700">No. Verification is authenticity-only (liveness). Users select their preferred community (Men’s or Women’s) and can change it later. DuoWeave never assigns or validates gender.</p>
+      </div>
       <div class="glass-card p-6 rounded-lg animate-slide-in delay-300">
         <h3 class="font-bold text-xl mb-2">Q: Why mandatory verification instead of optional like Bumble?</h3>
         <p class="text-gray-700">Optional verification doesn't solve the trust problem—it creates two-tier systems where verified users are rare. Mandatory verification changes the platform psychology: everyone knows everyone is real. That's the moat.</p>
@@ -1132,7 +1137,7 @@
       </div>
       <div class="glass-card p-6 rounded-lg animate-slide-in delay-600">
         <h3 class="font-bold text-xl mb-2">Q: Won't gender-specific spaces face legal/PR issues?</h3>
-        <p class="text-gray-700">We frame these as community preference options—users choose their experience. It supports comfort and safety, especially for women. Inclusive options for non-binary users are part of the roadmap.</p>
+        <p class="text-gray-700">We frame these as community preference options—users choose their experience. It supports comfort and safety, especially for women. Anyone can join either community; a 90-day cooldown applies between preference changes. Inclusive options for non-binary users are part of the roadmap.</p>
       </div>
       <div class="glass-card p-6 rounded-lg animate-slide-in delay-700">
         <h3 class="font-bold text-xl mb-2">Q: What if Meta/Instagram adds mandatory verification?</h3>
@@ -1157,6 +1162,10 @@
       <div class="glass-card p-6 rounded-lg animate-slide-in delay-1200">
         <h3 class="font-bold text-xl mb-2">Q: What's your long-term vision?</h3>
         <p class="text-gray-700">Become the identity verification layer for the internet. Start with social, expand to events, then offer a verification API: "Login with DuoWeave" = guaranteed real human. $10B+ potential.</p>
+      </div>
+      <div class="glass-card p-6 rounded-lg animate-slide-in delay-1350">
+        <h3 class="font-bold text-xl mb-2">Q: Can users change their community selection?</h3>
+        <p class="text-gray-700">Yes. Community selection is user-controlled and changeable in Settings. To promote stability and reduce abuse, changes are limited to once every 90 days.</p>
       </div>
       <div class="glass-card p-6 rounded-lg animate-slide-in delay-1300">
         <h3 class="font-bold text-xl mb-2">Q: Why raise only $65K?</h3>
